--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,19 @@
     "start": "ts-node server.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/react-router-dom": "^5.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "openai": "^4.0.0"
+    "express": "^4.18.2",
+    "multer": "^2.0.1",
+    "openai": "^4.0.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.1",
-    "nodemon": "^2.0.22",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
-    "@types/express": "^4.17.21"
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   }
 }
