--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "@types/react-router-dom": "^5.3.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "openai": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11",
-    "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "react-router-dom": "^7.6.3",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -28,9 +30,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0",
-    "ts-node": "^10.9.1"
+    "vite": "^7.0.0"
   }
 }
