--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^3.5.4",
     "multer": "^2.0.1",
     "openai": "^4.0.0",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.0.0",
+    "@vercel/node": "^5.3.4",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
