--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "formidable": "^3.5.4",
     "openai": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -23,8 +24,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/formidable": "^3.4.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vercel/node": "^5.3.4",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
