--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "dev:backend": "ts-node backend/server.ts"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
     "@types/react-router-dom": "^5.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -24,11 +23,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/formidable": "^3.4.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vercel/node": "^5.3.4",
     "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
