--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^12.0.0",
     "formidable": "^3.5.4",
     "openai": "^4.0.0",
     "react": "^19.1.0",
